--- a/lib/multiplayer_frame_web/templates/main_lobby/index.html.heex
+++ b/lib/multiplayer_frame_web/templates/main_lobby/index.html.heex
@@ -3,11 +3,11 @@
     <%= form_for :player_info, Routes.main_lobby_path(@conn, :join), [class: "flex flex-col space-y-6 justify-content"], fn f -> %>
         <div class = "flex flex-col space-y-2">
           <%= label f, "Display Name" %>
-          <%= text_input f, :name, class: "rounded border-none" %>
+          <%= text_input f, :name, class: "rounded border-none", value: @player.name, required: true %>
         </div>
         <div class = "flex flex-col space-y-2">
           <%= label f, "Room Code (Leave blank if creating a room)" %>
-          <%= text_input f, :room_code, class: "uppercase rounded border-none" %>
+          <%= text_input f, :room_code, class: "uppercase rounded border-none", maxlength: 6 %>
         </div>
         <div class = "flex justify-center">
           <%= submit "Create or Join Room", class: "button bg-gray-500 p-3 w-1/3 rounded" %>
